# cyclonedx-python-lib

./: .bandit  .bandit.yaml  .flake8  .gitattributes  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  MAINFEST.in  NOTICE  README.md  deps.lowest.r  pyproject.toml  requirements-test.txt  requirements.lowest.txt  requirements.txt  setup.py  tox.ini
.circleci/: circleci-readme.md  config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: deploy.yml  docs.yml  manual-release-candidate.yml  poetry.yml  python.yml  release.yml  zizmor.yml
cyclonedx/: __init__.py  __test.py  _internal.py  spdx.py
cyclonedx/__res/: README.md
cyclonedx/__res/schema/: .editorconfig  .gitattributes  README.md  bom-1.1.SNAPSHOT.xsd  bom-1.2-strict.SNAPSHOT.schema.json  bom-1.3-strict.SNAPSHOT.schema.json  bom-1.3.SNAPSHOT.schema.json  bom-1.3.SNAPSHOT.xsd  bom-1.3.xsd  bom-1.4.SNAPSHOT.schema.json
cyclonedx/_internal/: __init__.py  bom_ref.py  compare.py  hash.py  time.py
cyclonedx/builder/: __init__.py  this.py
cyclonedx/contrib/: README.md  __init__.py  license.py  this.py
cyclonedx/contrib/bom/: __init__.py  utils.py
cyclonedx/contrib/component/: __init__.py  builders.py
cyclonedx/contrib/dependency/: __init__.py  utils.py
cyclonedx/contrib/hash/: __init__.py  factories.py
cyclonedx/contrib/license/: __init__.py  exceptions.py  factories.py
cyclonedx/contrib/this/: __init__.py  builders.py
cyclonedx/contrib/vulnerability/: __init__.py  cvss.py
cyclonedx/exception/: __init__.py  factory.py  model.py  output.py  parser.py  serialization.py
cyclonedx/factory/: __init__.py  license.py
cyclonedx/model/: __init__.py  bom.py  bom_meta.py  bom_ref.py  component.py  component_evidence.py  composition.py  contact.py  crypto.py  cyclonedx.py  definition.py  dependency.py  evidence.py  impact_analysis.py  issue.py  license.py  lifecycle.py  model_card.py  release_note.py  release_notes.py  service.py  signature.py  tool.py  vulnerability.py
cyclonedx/output/: __init__.py  json.py  schema.py  xml.py
cyclonedx/output/serializer/: json.py
cyclonedx/parser/: __init__.py  conda.py  environment.py  pipenv.py  poetry.py  requirements.py
cyclonedx/schema/: __init__.py  bom-1.2.xsd  bom-1.3-strict.schema.json  bom-1.4.schema.json  bom-1.4.xsd  deprecation.py  schema.py  spdx.schema.json
cyclonedx/schema/_res/: README.md  __init__.py  bom-1.0.SNAPSHOT.xsd  bom-1.1.SNAPSHOT.xsd  bom-1.2-strict.SNAPSHOT.schema.json  bom-1.2.SNAPSHOT.schema.json  bom-1.2.SNAPSHOT.xsd  bom-1.3-strict.SNAPSHOT.schema.json  bom-1.3.SNAPSHOT.schema.json  bom-1.3.SNAPSHOT.xsd  bom-1.4.SNAPSHOT.schema.json  bom-1.4.SNAPSHOT.xsd  bom-1.5.SNAPSHOT.schema.json  bom-1.5.SNAPSHOT.xsd  bom-1.6.SNAPSHOT.schema.json  (+3 more)
cyclonedx/serialization/: __init__.py
cyclonedx/utils/: conda.py
cyclonedx/validation/: __init__.py  json.py  model.py  schema.py  xml.py
doc/: requirements.txt
doc/templates/: config.mako  css.mako  head.mako  logo.mako
docs/: architecture.rst  changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  install.rst  modelling.rst  outputting.rst  parsing.rst  requirements.txt  responsibilities_capabilities.rst  schema-support.rst  support.rst  upgrading.rst
examples/: README.md  build_and_serialize.py  complex.py  complex_deserialize.py  complex_serialize.py  complex_validation.py  validate_sbom.py
tests/: __init__.py  base.py  data.py  test_bom.py  test_builder_this.py  test_component.py  test_deserialize_json.py  test_deserialize_xml.py  test_e2e_environment.py  test_enums.py  test_factory_license.py  test_model.py  test_model_bom.py  test_model_bom_ref.py  test_model_component.py  test_model_component_evidence.py  test_model_crypto.py  test_model_definition.py  test_model_definition_repository.py  test_model_dependency.py  test_model_issue.py  test_model_license.py  test_model_lifecycle.py  test_model_model_card.py  test_model_release_note.py  test_model_service.py  test_model_signature.py  test_model_tool.py  test_model_tool_repository.py  test_model_vulnerability.py  test_output.py  test_output_BomRefDiscriminator.py  test_output_generic.py  test_output_json.py  test_output_xml.py  test_parser_conda.py  test_parser_environment.py  test_parser_pipenv.py  test_parser_poetry.py  test_parser_requirements.py  (+11 more)
tests/_data/: models.py
tests/fixtures/: README.md  bom_v1.0_setuptools.xml  bom_v1.1_setuptools_with_cpe.xml  bom_v1.2_services_complex.json  bom_v1.2_services_simple.json  bom_v1.2_setuptools.json  bom_v1.2_setuptools.xml  bom_v1.2_setuptools_with_cpe.json  bom_v1.2_setuptools_with_cpe.xml  bom_v1.2_setuptools_with_dependencies.json  bom_v1.2_setuptools_with_dependencies.xml  bom_v1.3_services_complex.json  bom_v1.3_services_simple.json  bom_v1.3_setuptools.json  bom_v1.3_setuptools.xml  bom_v1.3_setuptools_with_cpe.json  bom_v1.3_setuptools_with_cpe.xml  bom_v1.3_setuptools_with_dependencies.json  bom_v1.3_setuptools_with_dependencies.xml  bom_v1.3_setuptools_with_vulnerabilities.xml  bom_v1.3_toml_with_component_external_references.json  bom_v1.3_toml_with_component_hashes.json  bom_v1.3_toml_with_component_hashes.xml  bom_v1.3_toml_with_component_license.json  bom_v1.3_toml_with_component_license.xml  bom_v1.3_with_metadata_component.json  bom_v1.3_with_metadata_component.xml  bom_v1.4_services_complex.json  bom_v1.4_services_simple.json  bom_v1.4_setuptools.json  bom_v1.4_setuptools.xml  bom_v1.4_setuptools_no_version.json  bom_v1.4_setuptools_no_version.xml  bom_v1.4_setuptools_with_cpe.json  bom_v1.4_setuptools_with_cpe.xml  bom_v1.4_setuptools_with_dependencies.json  bom_v1.4_setuptools_with_dependencies.xml  bom_v1.4_setuptools_with_release_notes.json  bom_v1.4_setuptools_with_release_notes.xml  bom_v1.4_setuptools_with_vulnerabilities.json  (+3 more)
tests/test_contrib/: test_bom_utils.py
tests/test_internal/: __init__.py  test_bom_ref.py
tools/: run_pyupgrade.py  schema-downloader.py
typings/: sortedcontainers.pyi
typings/py_serializable/: __init__.pyi  helpers.pyi
(+222 files in other folders)
